src-tauri/check_output.txt
    Checking ciel v0.1.0 (D:\projects\ciel\src-tauri)
error[E0061]: this function takes 3 arguments but 1 argument was supplied
   --> src\commands.rs:240:17
    |
240 |         let _ = show_in_folder(download.filepath.clone());
    |                 ^^^^^^^^^^^^^^--------------------------- two arguments of type `AppHandle` and `tauri::State<'_, DbState>` are missing
    |
note: function defined here
   --> src\commands.rs:710:8
    |
710 | pub fn show_in_folder(app: AppHandle, db_state: State<'_, DbState>, path: String) -> Result<(), String> {
    |        ^^^^^^^^^^^^^^ --------------  ----------------------------
help: provide the arguments
    |
240 |         let _ = show_in_folder(/* AppHandle */, /* tauri::State<'_, DbState> */, download.filepath.clone());
    |                                +++++++++++++++++++++++++++++++++++++++++++++++++

error[E0063]: missing fields `cookies` and `user_agent` in initializer of `db::Download`
   --> src\commands.rs:438:20
    |
438 |     let download = Download {
    |                    ^^^^^^^^ missing `cookies` and `user_agent`

error[E0063]: missing fields `cookies` and `user_agent` in initializer of `db::Download`
   --> src\video.rs:138:20
    |
138 |     let download = Download {
    |                    ^^^^^^^^ missing `cookies` and `user_agent`

error[E0382]: borrow of partially moved value: `download`
   --> src\video.rs:391:38
    |
246 |         let expected_total_size = if let Some(meta_str) = download.metadata {
    |                                               -------- value partially moved here
...
391 |                 let download_clone = download.clone();
    |                                      ^^^^^^^^ value borrowed here after partial move
    |
    = note: partial move occurs because value has type `std::string::String`, which does not implement the `Copy` trait
help: borrow this binding in the pattern to avoid moving the value
    |
246 |         let expected_total_size = if let Some(ref meta_str) = download.metadata {
    |                                               +++

error[E0618]: expected function, found `&'static str`
   --> src\db.rs:288:9
    |
288 | //         "INSERT INTO downloads (id, url, filename, filepath, size, downloaded, status, protocol, speed, connections, created_at, complete...
289 | ||          VALUES (?1, ?2, ?3, ?4, ?5, ?6, ?7, ?8, ?9, ?10, ?11, ?12, ?13, ?14, ?15, ?16, ?17) "
    | ||                                                                                              ^- help: consider using a semicolon here to finish the statement: `;`
    | ||______________________________________________________________________________________________|
    | |
290 | |          (
291 | |              &download.id,
...   |
307 | |              &download.cookies,
308 | |          ),
    | |__________- call expression requires function

error[E0061]: this method takes 2 arguments but 1 argument was supplied
   --> src\db.rs:287:10
    |
287 |       conn.execute(
    |  __________^^^^^^^-
288 | |         "INSERT INTO downloads (id, url, filename, filepath, size, downloaded, status, protocol, speed, connections, created_at, complete...
289 | |          VALUES (?1, ?2, ?3, ?4, ?5, ?6, ?7, ?8, ?9, ?10, ?11, ?12, ?13, ?14, ?15, ?16, ?17) "
...   |
308 | |         ),
309 | |     )?;
    | |_____- argument #2 is missing
    |
note: method defined here
   --> C:\Users\shubh\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\rusqlite-0.32.1\src\lib.rs:623:12
    |
623 |     pub fn execute<P: Params>(&self, sql: &str, params: P) -> Result<usize> {
    |            ^^^^^^^
help: provide the argument
    |
287 ~     conn.execute("INSERT INTO downloads (id, url, filename, filepath, size, downloaded, status, protocol, speed, connections, created_at, completed_at, error_message, info_hash, metadata, user_agent, cookies)
288 +          VALUES (?1, ?2, ?3, ?4, ?5, ?6, ?7, ?8, ?9, ?10, ?11, ?12, ?13, ?14, ?15, ?16, ?17) "
289 +         (
290 +             &download.id,
291 +             &download.url,
292 +             &download.filename,
293 +             &download.filepath,
294 +             download.size,
295 +             download.downloaded,
296 +             download.status.as_str(),
297 +             download.protocol.as_str(),
298 +             download.speed,
299 +             download.connections,
300 +             &download.created_at,
301 +             &download.completed_at,
302 +             &download.error_message,
303 +             &download.info_hash,
304 +             &download.metadata,
305 +             &download.user_agent,
306 +             &download.cookies,
307 ~         ), /* params */)?;
    |

Some errors have detailed explanations: E0061, E0063, E0382, E0618.
For more information about an error, try `rustc --explain E0061`.
error: could not compile `ciel` (lib) due to 6 previous errors
